CR-2009-01-12-0: Bugfix:     o ge_has_feature():
                               - "job_submission_verify" renamed to
                                 to "job-submission-verify"
                               - new feature name "job-consumable"
                             o fixed resource_reservation test for
                               61_BRANCH
                             o added testsuite "COMMLIB" category
                 Review:     RD

RD-2009-01-12-0: Enhancem.:  Added test for scheduler message check
                 Review:     CR

JG-2009-01-12-0: Bugfix:     Fixed installation with windows hosts.
                 Review:     DG

EB-2009-01-09-0: Bugfix:     - enabled enforce limit tests again
                             - added some jsv/qalter related tests
                             - changed the way how TS handles vi (caused
									    problem with special vim plugins)
                 Review:     CR

MP-2009-01-07-0: Enhancem.:  added check for IZ 2752. qconf -Aconf should not
                             be able to modify an existing configuration
                 Review:     AP

JG-2008-01-05-1: Enhancem.:  o additional check for error logging in
                               tight_integration test
                             o give bdb rpc server a grace period at startup
                               before starting sge_qmaster - otherwise qmaster
                               (on a fast host) might try to connect to bdb
                               server (on a slow host) before it is fully
                               initialized.
                 Review:     CR

CR-2008-01-05-0: Bugfix:     fixed test "issue_1156"
                 Review:     JG

JG-2008-01-05-0: Enhancem.:  extended tight_integration test to reliably
                             show IZ 2815.
                             Removed workarounds to avoid running into IZ 2815.
                 Review:     DG
