@@ -144,17 +144,5 @@ proc __TESTSUITE_TEST_NAME_cleanup {} {
 proc __TESTSUITE_TEST_NAME_test1 {} {
    global ts_config CHECK_USER
    global __TESTSUITE_TEST_NAME_hosts
-   global CHECK_ACT_LEVEL
 
-   if {$CHECK_ACT_LEVEL == 0} {
-      ts_log_fine "this is the test for runlevel $CHECK_ACT_LEVEL"
-   }
-
-   if {$CHECK_ACT_LEVEL == 1} {
-      ts_log_fine "runlevel 1 produces a warning:"
-      ts_log_config "this is a dummy config message: This test can only be run with CSP mode"
-      # this would be an error:
-      # ts_log_severe "this is a dummy error"
-   }
 }
-
