@@ -1,3 +1,8 @@
+AP-2009-01-13-0: Enhancem.:  Added test for issue 2682
+                 Bugfix:     o source_cvs_release configuration fix
+                             o adjusting test template
+                 Review:     JG
+
 CR-2009-01-12-0: Bugfix:     o ge_has_feature():
                                - "job_submission_verify" renamed to
                                  to "job-submission-verify"
